# langchain-agent-dev-tuto

./: .env  .gitignore  README.md  checkpointer_postgres.md  docker-compose.postgres.yml  docker-compose.yml  langfuse_tracing.py  langgraph.json  langgraphjson文件说明.md  llm.py  main.py  pyproject.toml  settings.py  tools.py
.cursor/rules/: agent-learning-coach.mdc
.cursor/skills/langgraph-docs/: SKILL.md  llms.txt
.git-crypt/keys/default/0/: 3749D00D29F3ADFD9D98C7EF1B52F28624AE313F.gpg
01ToolCalling/: QA001-模型支持Function Calling是什么意思.md  QA002-Tool Calling与Function Calling的区别.md  QA003-ToolMessage结构与返回值设计.md  exercise_01_tool_definition.py  exercise_02_tool_calling_loop.py  exercise_03_react_stateful_loop.py
deep/tuto/01Quickstart/: 01exa.py  02exa.py
docs/: agent-memory-governance-design.md  backend.md  cursor-subagent-insights.md  custom-store-guide.md  langchain-ecosystem-overview.md  langgraph-frontend-sdk.md  minio-backend-feasibility.md  prompt-engineering-notes.md  search-agent-design.md  wsl-git-crypt-setup.md
docs/学习总结/: 001-agent开发模式初版总结.md  002-agent编排模式总结.md
model/: 01deepseek_doubao.py  02openai_doubao.py
src/: llm.py  qwen3_max_agent.py  qwen3_max_agent_blocks.py  simple_chat.py  vol_chat.py  weather_agent.py
src/dps/deep_research/: prompts_zh.py  research_agent.ipynb  tools.py  tools_zh.py
src/dps/memory/: post.py
src/tools/: api_search.py  test_api_search.py
tests/: test_chat.py
