[project]
name = "langchain-agent-dev-tuto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.4.9",
    "langchain>=1.2.11",
    "langchain-openai>=1.1.11",
    "langgraph-cli[inmem]>=0.4.15",
]

[tool.uv.workspace]
members = [
    "agent_server",
]
